--- a/core/config/form/role.xml
+++ b/core/config/form/role.xml
@@ -14,7 +14,7 @@
 
 				<field type="text" name="title">
 					<label>core.title</label>
-					<required>1</required>
+					<required />
 				</field>
 
 				<field type="textarea" name="description">
@@ -49,11 +49,11 @@
 			<elements>
 
 				<field type="cancelButton" name="cancel">
-					<onclick>Todoyu.Ext.sysmanager.Role.showList()</onclick>
+					<onclick>Todoyu.Ext.sysmanager.Roles.showList()</onclick>
 				</field>
 
 				<field type="saveButton" name="save">
-					<onclick>Todoyu.Ext.sysmanager.Role.save(this.form)</onclick>
+					<onclick>Todoyu.Ext.sysmanager.Roles.save(this.form)</onclick>
 				</field>
 
 			</elements>
