--- a/core/assets/css/button.css
+++ b/core/assets/css/button.css
@@ -60,11 +60,11 @@ button.edit .icon {
 }
 
 button.save .icon {
-	background:url(../img/icons.png) no-repeat 0 -209px;
+	background:url(../img/icons.png) no-repeat 0 -208px;
 }
 
 button.cancel .icon {
-	background:url(../img/icons.png) no-repeat 0 -328px;
+	background:url(../img/icons.png) no-repeat 3px -357px;
 }
 
 button.delete .icon {
