--- a/core/assets/css/base.css
+++ b/core/assets/css/base.css
@@ -55,14 +55,18 @@ td {
 
 ul {
 	list-style:none;
+	padding-left:5px;
+	padding-bottom:5px;
 }
 
 ol {
 	list-style-position:inside;
-	padding-left:10px;
+	padding-left:5px;
+	padding-bottom:5px;
 }
 p {
-	padding-bottom: 5px;
+	line-height:15px;
+	padding-bottom:5px;
 }
 
 
