--- a/core/assets/css/navi.css
+++ b/core/assets/css/navi.css
@@ -88,19 +88,7 @@ ul#navi-main-list li ul li {
 	background-image:none;
 	background-color:#d3dabb; /* bcl03 */
 	text-align:left;
-	padding-left:1px;
-	padding-right:1px;
-	border-left:1px solid #cdcec8;
-	border-right:1px solid #cdcec8;
-}
-
-ul#navi-main-list li ul li.first {
-		padding-top:1px;
-}
-
-ul#navi-main-list li ul li.last {
-	padding-bottom:1px;
-	border-bottom:1px solid #cdcec8;
+	margin-right: 0;
 }
 
 ul#navi-main-list li ul li a {
