--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -435,19 +435,23 @@ form .typeCheckbox div.errorMessage {
    ------------------------- */
 .acResultContainer	{
 		z-index:100;
+		border-top:1px solid #ccc;
+		-webkit-box-shadow:2px 2px 5px #999;
+		-moz-box-shadow:2px 2px 5px #999;
+		box-shadow:2px 2px 5px #999;
 	}
 
 	.acResultContainer li{
-		background:#f0f0ee;
-		border:0 solid #ccc;
-		border-width:0 1px 1px 1px;
-		padding:2px 0 2px 3px;
+		background:#fff;
+		border:1px solid #ccc;
+		border-top: none;
+		padding:5px;
 		cursor:pointer;
 		text-align:left;
 	}
 
 		.acResultContainer li.selected {
-			background:#d5dee5;
+			background:#edf0df;
 		}
 
 	.acResultContainer .empty{
