--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -81,10 +81,15 @@ h1 {
 	overflow:hidden;
 }
 
+.headerLine span,
+.button,
+.title {
+	text-shadow: 1px 1px #fff;
+}
+
 h1.headerLine.hasIcon {
 	padding-left:2px;
 }
-
 h1.headerLine.hasIcon span.title {
 	padding-left:27px;
 }
