--- a/core/assets/css/timepicker.css
+++ b/core/assets/css/timepicker.css
@@ -11,7 +11,10 @@
 	font-size:16px;
 	cursor:pointer;
 	background-color:#F9F9F9;
-	border:1px solid #000;
+	border:1px solid #ccc;
+	-webkit-box-shadow:2px 2px 5px #999;
+	-moz-box-shadow:2px 2px 5px #999;
+	box-shadow:2px 2px 5px #999;
 }
 
 .dpPicker .dpHour {
