* task no. 1473.238 * global styling optimizations

--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -84,7 +84,7 @@ h1 {
 .headerLine span,
 .button,
 .title {
-	text-shadow: 1px 1px #fff;
+	text-shadow: 1px 1px #f3f3f3;
 }
 
 h1.headerLine.hasIcon {
