--- a/core/lib/js/jscalendar/jscalendar.css
+++ b/core/lib/js/jscalendar/jscalendar.css
@@ -18,6 +18,19 @@ div.calendar, div.calendar table {
 	border-radius: 5px;
 }
 
+/* remove border-radius and box-shadow for panelwidget */
+#panelwidget-calendar.calendar {
+	-webkit-box-shadow:none;
+	-moz-box-shadow:none;
+	box-shadow:none;
+}
+#panelwidget-calendar.calendar, #panelwidget-calendar.calendar table {
+	background:none;
+	-webkit-border-radius:0;
+	-moz-border-radius:0;
+	border-radius:0;
+}
+
 /* Header part -- contains navigation buttons and day names. */
 
 div.calendar .button { /* "<<", "<", ">", ">>" buttons have this class */
