--- a/core/view/form/FormElement_DatabaseRelation.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation.tmpl
@@ -5,7 +5,7 @@
 <div class="foreignRecordsActionControl">
 	{Button label=$addLabel alt="form.records.add" class="addForeignRecord" id="add-record" onclick="Todoyu.Form.addRecord($idRecord, '$formname', '$fieldname', '$record.url.ext', '$record.url.controller')"}
 	{if sizeof($records)}
-		{Button label="form.databaserelation.expandAllRecords" alt="form.databaserelation.expandAllRecords" class="expandAll" id="expand-all" onclick="Todoyu.Form.expandForeignRecords(['$fieldname'])"}
+		{Button label="form.databaserelation.expandAllRecords" alt="form.databaserelation.expandAllRecords" class="expandAll" id="expand-all" onclick="Todoyu.Form.toggleForeignRecords(['$fieldname'])"}
 	{/if}
 	<input type="hidden" name="{$formname}[{$fieldname}]" value="0" />
 </div>
