--- a/core/view/form/FormElement_SelectGrouped.tmpl
+++ b/core/view/form/FormElement_SelectGrouped.tmpl
@@ -1,6 +1,7 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
+		{debug $value}
 <select name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {if $fieldClass}class="{$fieldClass}"{/if}>
 	{if !isset($multiple) && !isset($noPleaseSelect)}
 		<option value="0">{Label form.select.pleaseSelect}</option>
@@ -11,7 +12,7 @@
 			<optgroup label="{$label}">
 		{/if}
 		{foreach $group option}
-			<option value="{htmlencode $option.value}" {if $option.classname != ""}class="{$option.classname}"{/if} {if inArray($option.value, $value)}selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
+			<option value="{htmlencode $option.value}" {if $option.classname != ""}class="{$option.classname}"{/if} {if in_array($option.value, $value)} selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
 		{/foreach}
 		{if $label != "none"}
 			</optgroup>
