--- a/core/view/button.tmpl
+++ b/core/view/button.tmpl
@@ -1,5 +1,5 @@
 <button type="{$type|default:button}" {if $id}id="{$id}"{/if} class="button {$class}" onclick="{$onclick}" title="{if $title}{Label $title}{else}{Label $label}{/if}">
 	<span class="icon"></span>
-	<span class="label">{Label $label}</span>
+	{if $label}<span class="label">{Label $label}</span>{/if}
 	<span class="rgt"></span>
 </button>
