* moved truncation of project tab-head labels from model to view, added title tag to tab

--- a/core/view/tabhead.tmpl
+++ b/core/view/tabhead.tmpl
@@ -1,7 +1,7 @@
-<li id="{$name}-tab-{$tab.id}" class="item bcg05 tabkey-{$tab.id|default:"0"} {$tab.id} {$tab.class} {if $tab.id == $active}active{/if}">
+<li title="{htmlencode $tab.label}" id="{$name}-tab-{$tab.id}" class="item bcg05 tabkey-{$tab.id|default:"0"} {$tab.id} {$tab.class} {if $tab.id == $active}active{/if}">
 	<p id="{$name}-tab-{$tab.id}-label" class="label">
 		<span class="lt"><!-- --></span>
 		<span class="icon"><!-- icon --></span>
-		<span class="labeltext">{$tab.label}</span>
+		<span class="labeltext">{htmlencode $tab.label|truncate:24}</span>
 	</p>
 </li>
