--- a/core/assets/css/notification.css
+++ b/core/assets/css/notification.css
@@ -40,10 +40,11 @@
 }
 
 #notifications div.note td.countdown {
+	display:none;
 	width:25px;
-	font-size:14px;
-	padding-right:4px;
-	color:#666;
+	/*font-size:14px;*/
+	/*padding-right:4px;*/
+	/*color:#666;*/
 }
 
 #notifications div.note td.close {
