--- a/core/assets/css/overflow-window.css
+++ b/core/assets/css/overflow-window.css
@@ -19,8 +19,19 @@ div.overflowWindow div.close {
 	position:absolute;
 	width:30px;
 	height:30px;
-	right:0px;
-	top:0px;
+	right:0;
+	top:0;
 	background:url(../img/icons.png) no-repeat 5px -350px;
 	cursor:pointer;
+}
+
+#overflow-window-blocker {
+	position:fixed;
+	left:0;
+	top:0;
+	width:100%;
+	height:100%;
+	background-color:#000;
+	opacity:0.7;
+	z-index:2999;
 }
