* added screen disabling to about headlet window display * extended Todoyu UI with overlay to disable the screen

--- a/core/view/about-window.tmpl
+++ b/core/view/about-window.tmpl
@@ -5,15 +5,11 @@
 	todoyu comes with absolutely no warranty. This is free software, and you are welcome to redistribute it <a href="http://www.todoyu.com/index.php?id=bsdlicense" target="_blank">under certain conditions</a>.<br />
 	Obstructing the appearance of this notice is prohibited by law.
 </p>
-<p class="version">
-	todoyu {constant(TODOYU_VERSION)}
-</p>
+<p class="version">todoyu {constant(TODOYU_VERSION)}</p>
 <p class="community">
 	We thank the <a href="http://www.todoyu.com/index.php?id=contributors" target="_blank">community</a> for contributing to this project.
 </p>
-<p class="thanks">
-	Special thanks go to:
-</p>
+<p class="thanks">Special thanks go to:</p>
 <div class="names">
 	<ul id="scrollingnames">
 		<li>Adrian Zimmermann</li>
@@ -29,8 +25,8 @@
 		<li>Mario Rossi</li>
 		<li>Markus Rohner</li>
 		<li>Martin Wiederkehr</li>
-		<li>Pascal Fuchser</li>
 		<li>Nicolas Karrer</li>
+		<li>Pascal Fuchser</li>
 		<li>Thomas Imboden</li>
 		<li>Thomas Schläpfer</li>
 		<li>and last but not least the whole rest of the snowflake team</li>
