--- a/core/assets/css/overflow-window.css
+++ b/core/assets/css/overflow-window.css
@@ -35,3 +35,8 @@ div.overflowWindow div.close {
 	opacity:0.7;
 	z-index:2999;
 }
+
+.overlay_todoyu {
+	background-color:#969C85;
+	z-index:2999 !important;
+}
