--- a/core/view/about-window.tmpl
+++ b/core/view/about-window.tmpl
@@ -37,7 +37,7 @@
 </div>
 <div id="about-libs" class="creditsbox" style="display:none;">
 	<p>
-		<h1>todoyu contains the following 3rd party open source software:</h1>
+		<h1>todoyu contains the following third party open source software:</h1>
 	</p>
 
 {foreach $thirdpartycredits product credits}
