* improved gantt styling

--- a/core/lib/js/dhtmlxgantt/dhtmlxgantt.css
+++ b/core/lib/js/dhtmlxgantt/dhtmlxgantt.css
@@ -1,118 +1,8 @@
-/*.taskPanelBorder{*/
-	/*border:1px solid #737373;*/
-/*}*/
+div#ganttDiv table tbody tr td div div div {
+	font-weight:normal !important;
+	color:#000 !important;
+}
 
-/*.taskName{*/
-	/*font-size:11px;*/
-	/*color:#fff;*/
-	/*cursor:pointer;*/
-	/*white-space:nowrap;*/
-/*}*/
-
-/*.moveInfo{*/
-	/*font-size:10px;*/
-	/*color:#111;*/
-	/*white-space:nowrap;*/
-/*}*/
-
-/*.descTask{*/
-	/*font-size:10px;*/
-	/*color:#2D2D2D;*/
-	/*cursor:default;*/
-	/*white-space:nowrap;*/
-/*}*/
-
-/*.descProject{*/
-	/*font-size:10px;*/
-	/*color:#006600;*/
-	/*cursor:default;*/
-	/*white-space:nowrap;     */
-/*}*/
-
-/*.dayNumber,*/
-/*.monthName{*/
-	/*font-weight:bold;*/
-	/*font-size:9px;*/
-	/*color:#2d2d2d;*/
-	/*text-align:center;*/
-	/*vertical-align:middle;     */
-/*}*/
-
-/*.monthName {*/
-	/*text-transform:uppercase;*/
-	/*border-bottom:1px solid #f1f3f1;*/
-	/*border-left:1px solid #f1f3f1;*/
-	/*text-align:left;*/
-	/*padding-left:5px;     */
-/*}*/
-
-
-
-/* ----------------*/
-	/*Popups*/
-   /*---------------- */
-/*.poPupInfo{*/
-	/*background:#edf1e0;*/
-	/*border:1px solid #d3dabb;*/
-	/*width  :170px;*/
-	/*padding:4px 6px 4px 6px;*/
-	/*float:left;     */
-/*}*/
-
-/*.poPupTime{*/
-	/*background:#edf1e0;*/
-	/*border:1px solid #d3dabb;*/
-	/*height :25px;*/
-	/*width:70px;*/
-	/*position:absolute;*/
-	/*z-index:2;*/
-/*}*/
-
-/*.contextMenu{*/
-	/*border:1px solid #d3dabb;*/
-	/*z-index:10;*/
-	/*width:150px;*/
-	/*cursor:pointer;*/
-	/*font-size:12px;*/
-	/*color:#7D7D7D;*/
-/*}*/
-
-
-
-/*.taskNameItem{*/
-	/*font-size:11px;*/
-	/*font-weight:normal;*/
-	/*color:#111;*/
-	/*left:0 !important;*/
-	/*height:17px !important;*/
-	/*padding:0 0 0 3px;*/
-/*}*/
-
-/*.panelErrors{*/
-	/*padding:4px 6px 4px 6px;*/
-	/*font-size:12px;*/
-	/*color:red;*/
-	/*white-space:nowrap;     */
-/*}*/
-
-/*.st {*/
-	/*font-size:10px;*/
-	/*font-weight:normal;*/
-	/*color:#111;*/
-/*}*/
-
-/*.ut {*/
-	/*font-size:11px;*/
-	/*font-weight:normal;*/
-	/*color:#323232;*/
-/*}*/
-
-/*.lt {*/
-	/*font-size:11px;*/
-	/*font-weight:normal;*/
-	/*color:#323232;*/
-	/*padding:0px 0px 0px 14px;*/
-	/*margin:0px;*/
-	/*display:block;*/
-/*}*/
-
+.taskNameItem{
+	color:#000 !important;
+}
