--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -23,16 +23,16 @@
 				{$progress}
 
 				<div class="panelWidget">
-					<div class="panelwidgetContent">
-					<h1 class="deniedOpen">
-						<span class="title">Todoyu 2.0</span>
-						<span class="rgt"></span>
-					</h1>
-					<img src="assets/img/banner.jpg">
-					<p class="slogan">
-					{Label installer.slogan.line1} &ndash;<br />
-					{Label installer.slogan.line2}
-					</p>
+					<div class="content">
+						<h1 class="deniedOpen">
+							<span class="title">Todoyu 2.0</span>
+							<span class="rgt"></span>
+						</h1>
+						<img src="assets/img/banner.jpg">
+						<p class="slogan">
+						{Label installer.slogan.line1} &ndash;<br />
+						{Label installer.slogan.line2}
+						</p>
 					</div>
 				</div>
 			</div>
