--- a/core/assets/css/panel.css
+++ b/core/assets/css/panel.css
@@ -39,6 +39,9 @@
 /* ---------------------
 	Panelwidget content
    ---------------------*/
+#panel .panelWidget .content {
+	margin-top:5px;
+}
 
  /* Listing in panelwidgets */
 #panel div.panelWidget ul.naviList {
