--- a/install/assets/css/installer.css
+++ b/install/assets/css/installer.css
@@ -284,7 +284,7 @@ input#email.adminaccount {
 /* ----------------------------
  	Todoyu Panelwidget Slogan
    ---------------------------- */
-.panelWidget .panelwidgetContent {
+.panelWidget .content {
 	position:relative;
 }
 
