* Made TodoyuBaseObject abstract * Removed double css definition * Removed asset load for filters (outdated)

--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -109,7 +109,7 @@ h1.headerLine.hasIcon span.title {
 	line-height:28px;
 }
 
-.headerLine span.first, .headerLine span.first {
+.headerLine span.first {
 	padding:0 0 0 20px;
 }
 
