* task no. 1401.102 * optimized login styling

--- a/core/assets/css/headlet-ajaxloader.css
+++ b/core/assets/css/headlet-ajaxloader.css
@@ -8,5 +8,5 @@ li#headlet-ajaxloader a {
 }
 
 #headlets #headlet-ajaxloader-button {
-	background:url(../img/ajax-loader.png) no-repeat 7px 4px;
+	background:url(../img/ajax-loader.gif) no-repeat 7px 5px;
 }
