--- a/core/assets/css/base.css
+++ b/core/assets/css/base.css
@@ -56,9 +56,8 @@ td {
 ul {
 	list-style:none;
 }
-
 ol {
-	list-style-position:inside;
+	list-style-position:outside;
 	padding-left:5px;
 	padding-bottom:5px;
 }
@@ -157,13 +156,11 @@ h5 {
 
 
 .overflow {
-	overflow:auto !important;
-	overflow:inherit;
-	height:auto !important;
+	overflow:auto;
+	height:auto;
 	height:100%;
 	/* ie7 needs this sometimes */
 	min-height:100%;
-	padding-bottom:1px;
 }
 
 .overflowHidden {
