--- a/core/assets/css/tinymce.css
+++ b/core/assets/css/tinymce.css
@@ -6,3 +6,20 @@
 #tinymce {
 	margin-left:3px;
 }
+
+ul,
+ol {
+	list-style-position:outside;
+}
+ul {
+	margin:0;
+	padding:0 0 5px 14px;
+}
+ul li,
+ul li {
+	padding-left:5px;
+}
+ol {
+	margin:0 0 0 5px;
+	padding:0 0 5px 14px;
+}
