--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -57,7 +57,7 @@ li.listItem a.editableItem {
 	Box
    -----------------*/
 div.infoBox {
-	margin:0.5em 0;
+	margin-bottom:5px;
 	border:1px solid #e1e1e1;
 }
 
@@ -69,9 +69,6 @@ div.infoBox div.content {
 	padding: 5px 12px;
 	background: white;
 }
-
-
-
 /* -----------------
 	Heading
    -----------------*/
