--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -19,6 +19,7 @@ form {
 		display:block;
 		margin:0 0 7px 0;
 		padding:40px 15px 15px 15px;
+		border:1px solid #e1e1e1;
 		background-color:#fff;
 	}
 	fieldset fieldset,
